# usbpcapAI

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README  README.md  build_release.bat  driver_build.bat
USBPcapAI/: LICENSE  go.mod
USBPcapAI/cmd/pcap-report/: main.go
USBPcapAI/cmd/usbpcap-mcp/: install_guide.go  main.go  main_test.go
USBPcapAI/cmd/usbpcap-service/: driver_cmd.go  main.go  sysinfo_windows.go
USBPcapAI/internal/ipc/: client.go  launcher.go  launcher_other.go  launcher_windows.go  protocol.go
USBPcapAI/internal/pcap/: analyze.go  analyze_test.go  reader.go  summary.go  summary_test.go
USBPcapAI/internal/service/: acl_windows.go  config.go  config_test.go  server.go  server_test.go
USBPcapAI/internal/usbpcapcmd/: runner.go  runner_integration_test.go
USBPcapCMD/: CMakeLists.txt  USBPcapCMD.rc  cmd.c  descriptors.c  enum.c  enum.h  filters.c  roothubs.c  thread.c  thread.h
doc/: README.orig  changelog.md  improvement-roadmap.md  mcp-install-guide.md  test-acceptance-plan.md  test-bug-list.md  usbpcap-ai-mcp-plan-design-implementation.md
drivers/: README.md
nsis/: USBPcap.nsi
scripts/: deploy.ps1  package.ps1
wix/: USBPcap.wxs
